--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 golang_version: "1.9.2"
 golang_checksum: 
-golang_path: "/opt/go"
+golang_base_path: "/opt"
 golang_cache_path: "/var/anxs/golang"
 golang_profile: true
 golang_profile_path: "/etc/profile.d"
