--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 ---
 language: python
 python: "2.7"
-services:
-- docker
 
 env:
   matrix:
@@ -12,7 +10,7 @@ before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq python-apt python-pycurl
 install:
-  - pip install ansible=="$ANSIBLE_VERSION"
+  - pip install -U ansible=="$ANSIBLE_VERSION"
 
 script:
   - echo localhost > inventory
