--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ python: "2.7"
 
 env:
   matrix:
-  - ANSIBLE_VERSION=2.0.0.2
+    - ANSIBLE_VERSION="2.3.2"
+    - ANSIBLE_VERSION="2.4.2.0"
 
 before_install:
  - sudo apt-get update -qq
